Fixed a typo in the pratice exam

--- a/practice_exam_1.tex
+++ b/practice_exam_1.tex
@@ -31,7 +31,7 @@ $$\frac{x^3 + 7x + 3}{(x-5)^2(x^2 + 9)^2}.$$
 
 
 \vspace*{0.3in}
-\noindent 3. Evaluate $$ \int \frac{\cos{\theta}}{\sqrt{1 - sin{\theta}}} \, d\theta. $$
+\noindent 3. Evaluate $$ \int \frac{\cos{\theta}}{\sqrt{1 - \sin{\theta}}} \, d\theta. $$
 
 
 
